# Optimal-Trajectory-Generation-in-Frenet-Frame

./: CMakeLists.txt  README.md
include/: frenetPath.hpp  optimalTrajectoryPlanner.hpp  polynomial.hpp
src/: main.cpp  optimalTrajectoryPlanner.cpp  polynomial.cpp
